# remote-mouse

./: .clippy.toml  Cargo.toml  README.md
assets/: index.html  remote-mouse.css  remote-mouse.js
src/: app.rs  display.rs  main.rs  systemd.rs  websocket.rs
